# database_scratch

./: .gitignore  CMakeLists.txt  README.md
include/: cli.hpp  database.hpp
include/db/: common.hpp  database.hpp  kv_store.hpp  storage.hpp  wal.hpp
src/: cli.cpp  hello  main.cpp
src/cli/: cli.cpp
src/db/: database.cpp  kv_store.cpp  storage.cpp  wal.cpp
